# Dictado

./: .gitignore  ABOUT.md  BENCHMARKS.md  CHANGELOG.md  Dictado.cmd  Dictado.command  LICENSE  README.md  benchmark.py  benchmark_results.json  dictado.desktop  pyproject.toml  requirements.txt
assets/sounds/: biboo-asmr-hello.m4a
dictado/: __init__.py  __main__.py  agent_input.py  archive.py  audio.py  config.py  daemon.py  models.py  paths.py  wake_word.py
dictado/platform/: __init__.py  linux.py  macos.py  uia.py  windows.py
docs/: AGENT_INPUT_MODE.md  ISSUE_aim-electron-paste.md  MODELS.md  SECURITY.md  WAKE_WORD.md
samples/: README.md  librispeech-1272-128104-0004.txt
scripts/: install.ps1  install.sh
